objects/ASI_eForm_Prefill_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ASI eForm Prefill Fields</label>
</CustomObject>